--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -1346,6 +1346,9 @@
         "    attrs: DownloadAttrs = None\n",
         "\n",
         "htmlformatter = HTMLTemplateFormatter()\n",
+        "searchsortdropdowns_style = {\"description_width\": \"40px\"}\n",
+        "searchsortbtn_layout = {\"width\": \"80px\", \"margin\": \"0 10px\"}\n",
+        "searchdownloadbtn_layout = {\"width\": \"180px\"}\n",
         "pagebtn_layout= {'width':'29px', 'height':'29px', 'padding': '2px', 'margin': '0 6px 0 0'}\n",
         "resultsrowfontsize = '16px'\n",
         "downloadbtn = '<i class=\"ico ico-download\"></i>'\n",
@@ -1367,6 +1370,8 @@
         "                    color: #001dd5;\n",
         "                \"\"\"\n",
         "wordwrap_css = \"white-space: pre-wrap;\"\n",
+        "\n",
+        "getpagekey = lambda sort, order, page: f\"{sort}|{order}|{page}\"\n",
         "\n",
         "class WebResult:\n",
         "    def __init__(self, search=\"\", category= None, results= None, attrs= None, sort= None, order= None, url= None, resultcount= 0, page= None,\n",
@@ -1508,11 +1513,11 @@
         "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))])\n",
         "\n",
         "    def getresultcontrols(self):\n",
-        "        sort_dropdown = Dropdown(description= \"Sort\", value= self.sort ,options= [(\"By User Rating\", IMDB_RATING_SORT), (\"By Date\", IMDB_DATE_SORT), (\"Alphabetically\", IMDB_ALPHABETICAL_SORT)], layout= {}, style= {})\n",
-        "        order_dropdown = Dropdown(description= \"Order\", value= self.order, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= {}, style= {})\n",
-        "        sort_btn = Button(description= \"Sort\", layout= {\"width\": \"80px\", \"margin\": \"0 50px 0 0\"})\n",
+        "        sort_dropdown = Dropdown(description= \"Sort\", value= self.sort ,options= [(\"By User Rating\", IMDB_RATING_SORT), (\"By Date\", IMDB_DATE_SORT), (\"Alphabetically\", IMDB_ALPHABETICAL_SORT)], layout= {}, style= searchsortdropdowns_style)\n",
+        "        order_dropdown = Dropdown(description= \"Order\", value= self.order, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= {}, style= searchsortdropdowns_style)\n",
+        "        sort_btn = Button(description= \"Sort\", layout= searchsortbtn_layout)\n",
         "        sort_btn.on_click(lambda btn: updatesearchresults(self, 1, sort= sort_dropdown.value, order= order_dropdown.value))\n",
-        "        download_btn = Button(description= \"Download Selected\", layout= {\"width\": \"150px\"})\n",
+        "        download_btn = Button(description= \"Download Selected\", layout= searchdownloadbtn_layout)\n",
         "        download_btn.on_click(self.handlebulkdownload)\n",
         "        return (sort_dropdown, order_dropdown, sort_btn, download_btn)\n",
         "    \n",
@@ -1523,15 +1528,14 @@
         "        # handler pops next downloaditem, displays site decision view (temp) with handler\n",
         "        # on input handler searches in the site\n",
         "        # on download, adds donwloadload, pops next download item and shows site decesion view ()\n",
-        "\n",
-        "        #display site\n",
+        "        #display result\n",
         "\n",
         "    def updateresults(self, page, sort= None, order= None):\n",
         "        if not sort:\n",
         "            sort= self.imdbparams.imdbsort\n",
         "        if not order:\n",
         "            order= self.imdbparams.imdborder\n",
-        "        pagekey = f\"{page}|{sort}|{order}\" \n",
+        "        pagekey = getpagekey(sort, order, page)\n",
         "        if pagekey in self.resultpages:\n",
         "            self.results = self.resultpages[pagekey]\n",
         "            self.downloadedtitles = self.downloadedtitlespages[page]\n",
@@ -1597,9 +1601,9 @@
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
         "\n",
         "    def getresultcontrols(self):\n",
-        "        sort_dropdown =  Dropdown(description= \"Sort\", value= self.sort, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= {}, style= {})\n",
-        "        order_dropdown = Dropdown(description= \"Order\", value= self.order, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= {}, style= {})\n",
-        "        sort_btn = Button(description= \"Sort\", layout= {\"width\": \"80px\", \"margin\": \"0 50px 0 0\"})\n",
+        "        sort_dropdown =  Dropdown(description= \"Sort\", value= self.sort, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= {}, style= searchsortdropdowns_style)\n",
+        "        order_dropdown = Dropdown(description= \"Order\", value= self.order, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= {}, style= searchsortdropdowns_style)\n",
+        "        sort_btn = Button(description= \"Sort\", layout= searchsortbtn_layout)\n",
         "        sort_btn.on_click(lambda btn: updatesearchresults(self, 1, sort= sort_dropdown.value, order= order_dropdown.value))\n",
         "        return (sort_dropdown, order_dropdown, sort_btn)\n",
         "    \n",
@@ -1608,7 +1612,7 @@
         "            sort = self.sort\n",
         "        if not order:\n",
         "            order = self.order\n",
-        "        pagekey = f\"{page}|{sort}|{order}\"\n",
+        "        pagekey = getpagekey(sort, order, page)\n",
         "        if pagekey in self.resultpages:\n",
         "            self.results = self.resultpages[pagekey]\n",
         "            self.pageresultcount = len(self.results)\n",
@@ -2527,8 +2531,7 @@
         "                error(ex())\n",
         "                continue       \n",
         "        result.results = titles\n",
-        "        pagekey = f\"{page}|{imdbparams.imdbsort}|{imdbparams.imdborder}\"\n",
-        "        result.resultpages[pagekey] = titles\n",
+        "        result.resultpages[getpagekey(imdbparams.imdbsort, imdbparams.imdborder, page)] = titles\n",
         "        result.watchedtitles = watched\n",
         "        result.watchedtitlespages[page] = watched\n",
         "        result.downloadedtitles = downloaded\n",
@@ -2843,7 +2846,7 @@
         "                    results.append(res)\n",
         "                result.resultcount = len(results)\n",
         "                result.results = results\n",
-        "                result.resultpages[f\"{page}|{sort}|{order}\"] = results\n",
+        "                result.resultpages[getpagekey(sort, order, page)] = results\n",
         "            else:\n",
         "                info(f\"No results found for {search}.\")\n",
         "                result.status = FAIL\n",
@@ -5084,7 +5087,7 @@
         "        children = (result_html,)\n",
         "    else:\n",
         "        searchtitle_html = HTML(gethtmltext(f\"Search results {result.search}\", fontsize= '22px'), layout= {'width': '33%'})\n",
-        "        controls_hbox = HBox(result.getresultcontrols(), layout= {\"width\": \"650px\"})\n",
+        "        controls_hbox = HBox(result.getresultcontrols(), layout= {\"width\": \"700px\"})\n",
         "        pagination = getpagination(result)\n",
         "        pagination_hbox = HBox(pagination, layout= {'align_items':'center'})\n",
         "        row1 = HBox((searchtitle_html, controls_hbox, pagination_hbox), layout= {\"height\": \"45px\", \"width\": \"100%\", \"align_items\": \"center\", 'padding': '0 0 0 40px'})\n",
@@ -5569,13 +5572,10 @@
         "    Delete_torrent_files = True \n",
         "    Clear_done_folder = True  \n",
         "    Clear_temp_folder = False  \n",
-        "\n",
         "    if Delete_torrent_files:\n",
         "        !find . -maxdepth 1 -name \"*.torrent\" -type f -delete \n",
-        "\n",
         "    if Clear_done_folder:  \n",
         "        !rm -r \"$done_path/\"* \n",
-        "\n",
         "    if Clear_temp_folder:\n",
         "        !rm -r \"$temp_save/\"* \n",
         "    release()    \n",
@@ -5594,8 +5594,7 @@
         "        error(ex())\n",
         "    release()\n",
         "\n",
-        "ct = lambda: arethreadsworking(config.setupthreads)\n",
-        "if ct():\n",
+        "if arethreadsworking(config.setupthreads):\n",
         "    for thread in config.setupthreads:\n",
         "        thread.join()\n",
         "\n",
